Fix overflow of main area

--- a/css/index.scss
+++ b/css/index.scss
@@ -94,7 +94,7 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  overflow: hidden;
+  overflow: auto;
   background-color: #46342f;
 }
 .main:first-child { // No sidebar
